--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "@nrwl/next": "^14.4.3",
     "core-js": "^3.6.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
