projects added back

--- a/nx.json
+++ b/nx.json
@@ -39,6 +39,13 @@
         "style": "scss",
         "linter": "eslint"
       }
+    },
+    "@nrwl/next": {
+      "application": {
+        "style": "scss",
+        "linter": "eslint"
+      }
     }
-  }
+  },
+  "defaultProject": "docs"
 }
