--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nrwl/next": "^14.4.3",
     "@stitches/react": "^1.2.8",
     "core-js": "^3.6.5",
+    "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.3.0",
@@ -49,6 +50,7 @@
     "babel-loader": "8.1.0",
     "cypress": "^9.1.0",
     "eslint": "~8.15.0",
+    "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
@@ -59,6 +61,7 @@
     "nx": "14.4.3",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
+    "sass": "1.52.3",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
     "typescript": "~4.7.2",
